--- a/main.html
+++ b/main.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>My Motivation to Become a Software Developer</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Why I want to become a developer?</h1>
+    <p>
+        My motivation to become a software developer stems from a deep passion for technology, problem-solving, and the desire to create meaningful and innovative solutions. The ever-evolving nature of the tech industry excites me, and I am drawn to the opportunities it offers for continuous learning and growth.
 
+        Software development allows me to bridge the gap between creativity and logical thinking. I find satisfaction in transforming abstract ideas into tangible, functional applications. The ability to write code and see it come to life is incredibly rewarding.
+
+        Furthermore, the impact of technology on our daily lives cannot be overstated. Software developers have the power to shape the future, whether by developing software that makes tasks more efficient, improves healthcare, or connects people across the globe. This potential for positive change motivates me to contribute to the field.
+
+        Problem-solving is at the core of software development, and I relish the challenge of dissecting complex issues and finding elegant solutions. It's a career that encourages constant problem-solving and creative thinking, which I find invigorating.
+
+        In conclusion, my journey towards becoming a software developer is fueled by the love of technology, the desire to create, and the opportunity to make a positive impact. I am committed to honing my skills and knowledge to contribute to this dynamic and transformative field.
+    </p>
 </body>
-
 </html>
